# ababilx_terminal

./: CLAUDE.md  Cargo.toml  README.md  install-linux.sh  install.ps1  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/ababil-config/: Cargo.toml
crates/ababil-config/src/: lib.rs
crates/ababil-exec/: Cargo.toml
crates/ababil-exec/src/: lib.rs  pty.rs  (+1 more)
crates/ababil-parser/: Cargo.toml
crates/ababil-runtime/: Cargo.toml
crates/ababil-session/: Cargo.toml
crates/ababil-session/src/: events.rs  lib.rs  session.rs
crates/ababil-session/tests/: session.rs
crates/ababil-shell/: Cargo.toml
crates/ababil-shell/src/: alias.rs  lib.rs
crates/ababil-shell/tests/: shell.rs
crates/ababil-workspace/: Cargo.toml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.tsx  CommandPalette.tsx  TabSwitcher.tsx  UpdateBanner.tsx
src/hooks/: useAppThemeSync.ts  usePreview.ts  useTerminalSession.ts  useWindowFullscreenSync.ts
src/lib/: aliases.ts  color.ts  keybinds.ts  platform.ts  tauri.ts  themes.ts  updateCheck.ts  updateCommands.ts  versionCompare.ts
src/store/: settings.ts  splitTree.ts  tabNames.ts  terminal.ts  ui.ts  update.ts
src/terminal/: applyTerminalSettings.ts  createTerminal.ts  cwdTracker.ts  events.ts  fonts.ts  lsFormat.ts  lsPicker.ts  renderer.ts  routeInput.ts  session.ts  wireTerminal.ts  xtermRenderer.ts
src/types/: terminal.ts
(+65 files in other folders)
